FIX: checkbox termes et conditions de nouveau visible

--- a/twist/app/register/register.css
+++ b/twist/app/register/register.css
@@ -202,3 +202,7 @@ label {
   background-color: #f8d7da;
   color: #721c24;
 }
+
+#terms-checkbox {
+    width: 50px;
+}
